Concertando problemas no nav

--- a/pages/politicas_privacidade.html
+++ b/pages/politicas_privacidade.html
@@ -35,7 +35,7 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./quemSomos.html">Quem Somos</a>
+                        <a class="nav-link" href="./quemSomos.html">Quem Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./formulario.html">Formulário</a>
@@ -45,7 +45,7 @@
                         Controle</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./politicas_privacidade.html">Politícas de Privacidade</a>
+                        <a class="nav-link active" href="./politicas_privacidade.html">Politícas de Privacidade</a>
                     </li>
                 </ul>
             </div>
