--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -35,10 +35,10 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./quemSomos.html">Quem Somos</a>
+            <a class="nav-link" href="./quemSomos.html">Quem Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./formulario.html">Formulário</a>
+            <a class="nav-link active" href="./formulario.html">Formulário</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./painel.html">Painel de
