--- a/pages/painel.html
+++ b/pages/painel.html
@@ -33,13 +33,13 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./quemSomos.html">Quem Somos</a>
+                        <a class="nav-link" href="./quemSomos.html">Quem Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./formulario.html">Formulário</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./painel.html">Painel de
+                        <a class="nav-link active" href="./painel.html">Painel de
                         Controle</a>
                     </li>
                     <li class="nav-item">
