Concertando problemas no nav

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
                             Grupo A
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./time_palmeiras.html">Palmeiras</a></li>
-                            <li><a class="dropdown-item" href="./time_interMiami.html">Inter Miami</a></li>
-                            <li><a class="dropdown-item" href="./time_ahly.html">Al Ahly</a></li>
-                            <li><a class="dropdown-item" href="./time_portoPC.html">Porto FC</a></li>
+                            <li><a class="dropdown-item" href="./pages/time_palmeiras.html">Palmeiras</a></li>
+                            <li><a class="dropdown-item" href="./pages/time_interMiami.html">Inter Miami</a></li>
+                            <li><a class="dropdown-item" href="./pages/time_ahly.html">Al Ahly</a></li>
+                            <li><a class="dropdown-item" href="./pages/time_portoPC.html">Porto FC</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./pages/quemSomos.html">Quem Somos</a>
+                        <a class="nav-link" href="./pages/quemSomos.html">Quem Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./pages/formulario.html">Formulário</a>
