--- a/pages/formulario.html
+++ b/pages/formulario.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="./quemSomos.html">Quem Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="./formulario.html">Formulário</a>
+            <a class="nav-link form" href="./formulario.html">Formulário</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./painel.html">Painel de
