atualizando politicas de privacidade

--- a/pages/politicas_privacidade.html
+++ b/pages/politicas_privacidade.html
@@ -70,39 +70,89 @@
       <article id="lgpd">
         <h2>Privacidade: LGPD</h2>
         <h3>Dados pessoais que coletamos</h3>
-        <p>Coletamos informações pessoais como nome, e-mail, telefone e dados de navegação quando você interage com nossos serviços. Esses dados são essenciais para garantir a segurança, personalização e melhoria contínua da sua experiência conosco.</p>
-
-        <h3>Como utilizamos dados pessoais</h3>
-        <p>Utilizamos seus dados para fins como cadastro, atendimento ao cliente, envio de comunicações, análise de uso e cumprimento de obrigações legais. Todos os dados são tratados com base na Lei Geral de Proteção de Dados (LGPD), respeitando sua privacidade e direitos.</p>
+          <p>A TECHRÔNIO coleta dados pessoais de diferentes tipos, entre eles estão:
+            <ul>
+              <li>Informações de cadastro e contato — nome, endereço, endereço de e-mail, etc.</li>
+              <li>Informações de localização — endereço IP, localização via GPS, cookies, dados de login, informações sobre dispositivos, etc.</li>
+            </ul>
+          </p>
+          <h3>Como utilizamos dados pessoais</h3>
+            <p>Coletamos informações visando sempre a melhoria de nossas plataformas aos usuários e clientes, futuros e de longa data. Isso inclui descobrir informações básicas, como seu idioma e país de origem. Com essas informações, podemos nos adaptar à suas condições e de outros usuários que virão a acessar o site, posteriormente.</p>
+              <p>Dados como nome, endereço e endereço de email são utilizados para:
+                <ul>
+                  <li>Identificar o indivíduo que está acessando o site;</li>
+                  <li>Reconhecer que país possui a maior porcentagem de nossos usuários;</li>
+                  <li>Receber feedbacks dos mesmos sobre nossos sites.</li>
+                </ul>
+              </p>
       </article>
 
       <article id="sustentabilidade">
         <h2>Sustentabilidade</h2>
         <h3>Saúde e bem-estar</h3>
-        <p>Adotamos práticas que promovem o bem-estar de nossos colaboradores e clientes, com ações voltadas à saúde física, mental e qualidade de vida no ambiente corporativo.</p>
+        <p>A TECHRÔNIO acredita que promover a saúde e o bem-estar é essencial para seu desenvolvimento, desempenho e sucesso como empresa. Por isso, programas como apoio psicológico e incentivo à atividade física (principalmente para profissionais da área de T.I), são essenciais e estão sempre presentes no ambiente de trabalho TECHRÔNIO.</p> 
+          <p>Possuímos uma cultura de feedback e conscientização sobre a importância da saúde, tanto que esses temas também estão entre os programas de saúde e bem-estar da nossa empresa, sendo eles recomendados a todos os nossos funcionários. 
+</p>
 
         <h3>Igualdade de gênero</h3>
-        <p>Promovemos políticas inclusivas para garantir igualdade de oportunidades, remuneração justa e representatividade entre homens e mulheres em todas as áreas da organização.</p>
+        <p>Nossa empresa acredita que a igualdade entre os gêneros é essencial para o funcionamento e evolução da mesma. A TECHRÔNIO se propõe a garantir as mesmas oportunidades, tratamento, direitos e salários para seus subordinados, sempre focando em seu desempenho, e não em seu gênero.</p>
 
         <h3>Redução das desigualdades</h3>
-        <p>Buscamos reduzir desigualdades sociais através de projetos comunitários, apoio à educação e incentivo ao empreendedorismo local.</p>
+        <p>Focamos em criar um ambiente inclusivo e equitativo a todos os níveis da organização por meio de nossa política de igualdades. Nossa política de igualdades visa implementar políticas claras que garantem igualdade em contratações, promoções e salários (como citado acima), independentemente do gênero e/ou orientação sexual do funcionário, raça ou etnia. Não toleramos qualquer atitude contrária a essa política, e/ou discurso de ódio propagado por superiores ou funcionários.</p>
 
         <h3>Parcerias e meios de implementação</h3>
-        <p>Firmamos parcerias com organizações públicas e privadas para desenvolver iniciativas sustentáveis que beneficiem o meio ambiente e a sociedade como um todo.</p>
+        <p>Parcerias e meios de Implementação, tem o objetivo de fortalecer a colaboração estratégica entre organizações, bem como recursos e processos para alcançar um objetivo de negócio em comum. O ODS 17, especificamente, visa fortalecer essas colaborações com o objetivo de alcançar o desenvolvimento sustentável.</p>
       </article>
 
       <article id="responsabilidade">
         <h2>Responsabilidade Social</h2>
-        <p>Nosso compromisso social está presente em ações que promovem a inclusão, educação e cidadania. Atuamos com transparência e ética, respeitando os direitos humanos e colaborando com o desenvolvimento das comunidades onde estamos inseridos.</p>
+        <p>Nosso compromisso social está presente em ações que promovem a inclusão, educação e cidadania. Atuamos com transparência e ética, respeitando os direitos humanos e colaborando com o desenvolvimento das comunidades onde estamos inseridos.
+          <p><strong>Abaixo, uma lista de como a TECHRÔNIO contribui com a ODS 17:</strong></p>
+          <ul>
+            <li>Desenvolvimento de Softwares Inclusivos;</li>
+            <li>Adoção de práticas sustentáveis, como uso eficiente de recursos, redução do consumo de energia e optar por fontes de energia renovável;</li>
+            <li>Apoio financeiro a instituições de proteção ao meio ambiente;</li>
+            <li>Engajamento a projetos sociais que utilizam da tecnologia para resolução de questões sociais como a falta de educação para todos, saúde pública, combate à fome e proteção ao meio ambiente.</li>
+          </ul>
+        </p>
       </article>
 
       <article id="conduta">
         <h2>Normas de Conduta da Empresa</h2>
         <h3>Comportamento</h3>
-        <p>Esperamos que todos os colaboradores ajam com respeito, integridade e profissionalismo em todas as interações, tanto internas quanto externas à empresa.</p>
+        <p>As Normas de Conduta de uma empresa são um conjunto de regras e princípios que orientam o comportamento de todos os colaboradores no ambiente de trabalho, a tomada de decisões, e também a forma de operação da empresa, visando fornecer um ambiente de trabalho ético, produtivo e seguro.</p>
 
         <h3>Ética empresarial</h3>
-        <p>Nossos princípios éticos orientam nossas decisões e ações. Repudiamos qualquer forma de corrupção, assédio, discriminação ou práticas ilegais, e valorizamos a transparência nos negócios.</p>
+        <p>Responsabilidade Social Empresarial, também conhecida como RSE, é o compromisso voluntário de uma empresa em ir além do lucro, observando seu impacto e o impacto de suas atividades na sociedade e no meio ambiente, focando em se tornar cada vez mais responsável e ética. A TECHRÔNIO pratica a RSE por meio do programa Ações de Voluntariado, onde incentivamos nossos funcionários de todos os níveis a participarem de projetos sociais e ambientais.</p>
+        <p><strong>Código de ética e conduta:</strong></p>
+          <p>Nosso Código de Ética e Conduta visa evidenciar e reforçar os valores éticos da TECHRÔNIO, sua identidade organizacional e os princípios que orientam a condução de suas atividades.</p>
+            <p><strong>Princípios e Valores:</strong>
+              <ul>
+                <li>Foco na Qualidade;</li>
+                <li>Entregar serviços assiduamente;</li>
+                <li>Criar um ambiente de trabalho que atinjam padrões superiores de qualidade;</li>
+                <li>Compromisso com as normas da empresa.</li>
+              </ul>
+            </p>
+            <p><strong>Regulamento Interno:</strong>
+              <ul>
+                <li>Horário de trabalho e controle de ponto: horários de entrada e saída — das 8:30 às 16:30.</li>
+                <li>Intervalos — horário de almoço das 12:30 às 13:30;</li>
+                <li>Pontos são registrados por meio de reconhecimento facial através do aplicativo da empresa.</li>
+                <li>Faltas e atrasos: serão aceitas faltas que forem justificadas por meio de atestados médicos verídicos e/ou aviso prévio.</li>
+                <li>Qualquer falta que esteja fora dessas ocasiões será considerada sem justificativa. Mais de 3 faltas sem justificativa no mês resultará na demissão por justa causa.</li>
+                <li>Atrasos são tolerados até 35 minutos depois do horário de início do trabalho. Atrasos frequentes e sem justificativa resultarão na demissão por justa causa.</li>
+                <li>Uso de equipamentos e materiais: O uso dos computadores e máquinas é permitido em qualquer horário, desde que justificado e para fins de trabalho.</li>
+                <li>O acesso a documentos precisa de justificativa e autorização de um superior. Pedidos sem justificativa e autorização não serão concedidos.</li>
+                <li>Política de uso de internet e e-mail: e-mails  de viés pessoal e/ou inadequado utilizando o e-mail empresarial são estritamente proibidos. Qualquer uso deste tipo de viés para e-mails resultará em advertências ao funcionário.</li>
+              </ul>
+              <p><strong>Sanções disciplinares:</strong> O descumprimento de regras resulta em advertências ao funcionário. Mais do que <u>3 advertências resultará</u> na demissão por justa causa do mesmo.</p>
+            </p>
+            <p><strong>Normas de Segurança:</strong>
+            <ul>
+              <li>Adquirimos o uso de Equipamentos de Proteção Individual (EPIs), prevenção de acidentes e procedimentos em caso de emergência. Os funcionários recebem instruções sobre procedimentos de primeiros socorros e segurança no ambiente de trabalho duas vezes ao mês, obrigatoriamente.</li>
+            </ul>
+            </p>
       </article>
 
       <div class="topo">
